# napari-experimental

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/group_layers/: implementation.doctree  index.doctree
.doctrees/group_layers/classes/: group_layer_and_nodes.doctree  widget.doctree
.github/workflows/: build_docs.yaml  test_and_deploy.yml
_sources/: index.md.txt
_sources/group_layers/: index.md.txt
docs/: index.md
docs/source/: conf.py  index.md
docs/source/group_layers/: implementation.md  index.md
docs/source/group_layers/classes/: group_layer_and_nodes.md  widget.md
group_layers/: implementation.html  index.html
group_layers/classes/: group_layer_and_nodes.html  widget.html
src/napari_experimental/: __init__.py  _widget.py  group_layer.py  group_layer_actions.py  group_layer_context.py  group_layer_controls.py  group_layer_delegate.py  group_layer_node.py  group_layer_qt.py  layergroup.py  layergroup_example.py  names_only.py  napari.yaml  qt_layer_tree_model.py  tree_model.py
src/napari_experimental/_tests/: test_widget.py
src/napari_experimental/styles/: tree.qss
tests/: blobs.py  conftest.py  test_group_layer.py  test_group_layer_controls.py  test_group_layer_qt_model.py  test_group_layer_widget.py  test_qt_group_layer_model.py  test_widget.py
tests/fixtures/: conftest_group_layers.py  conftest_layers.py
